; ModuleID = '/home/carl/AnghaBench/git/extr_branch.c_remove_merge_branch_state.c'
source_filename = "/home/carl/AnghaBench/git/extr_branch.c_remove_merge_branch_state.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.repository = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @remove_merge_branch_state(%struct.repository* %0) #0 {
  %2 = alloca %struct.repository*, align 8
  store %struct.repository* %0, %struct.repository** %2, align 8
  %3 = load %struct.repository*, %struct.repository** %2, align 8
  %4 = call i32 @git_path_merge_head(%struct.repository* %3)
  %5 = call i32 @unlink(i32 %4)
  %6 = load %struct.repository*, %struct.repository** %2, align 8
  %7 = call i32 @git_path_merge_rr(%struct.repository* %6)
  %8 = call i32 @unlink(i32 %7)
  %9 = load %struct.repository*, %struct.repository** %2, align 8
  %10 = call i32 @git_path_merge_msg(%struct.repository* %9)
  %11 = call i32 @unlink(i32 %10)
  %12 = load %struct.repository*, %struct.repository** %2, align 8
  %13 = call i32 @git_path_merge_mode(%struct.repository* %12)
  %14 = call i32 @unlink(i32 %13)
  ret void
}

declare dso_local i32 @unlink(i32) #1

declare dso_local i32 @git_path_merge_head(%struct.repository*) #1

declare dso_local i32 @git_path_merge_rr(%struct.repository*) #1

declare dso_local i32 @git_path_merge_msg(%struct.repository*) #1

declare dso_local i32 @git_path_merge_mode(%struct.repository*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
